--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,30 +1,2 @@
-pipeline {
-    agent {
-        docker {
-            image 'maven:3-alpine'
-            args '-v /root/.m2:/root/.m2'
-        }
-    }
-    stages {
-        stage('Build') {
-            steps {
-                sh 'mvn -B -DskipTests clean package'
-            }
-        }
-        stage('Test') {
-            steps {
-                sh 'mvn test'
-            }
-            post {
-                always {
-                    junit 'target/surefire-reports/*.xml'
-                }
-            }
-        }
-        stage('Deliver') {
-            steps {
-                sh './jenkins/scripts/deliver.sh'
-            }
-        }
-    }
-}
+library identifier: 'jenkins/jenkinsfile', retriever: modernSCM([$class: 'GitSCMSource', credentialsId: '', id: '8ea9e67c-5c1f-41e9-b934-9ebf32f51218', remote: 'https://github.com/saikrishnabellam/jenkins-maveen.git', traits: [[$class: 'jenkins.plugins.git.traits.BranchDiscoveryTrait']]])
+
