--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,2 +1,3 @@
+pipeline
 library identifier: 'jenkins/jenkinsfile', retriever: modernSCM([$class: 'GitSCMSource', credentialsId: '', id: '8ea9e67c-5c1f-41e9-b934-9ebf32f51218', remote: 'https://github.com/saikrishnabellam/jenkins-maveen.git', traits: [[$class: 'jenkins.plugins.git.traits.BranchDiscoveryTrait']]])
 
